# Pipiproxy

./: .gitignore  .travis.yml  Readme.md  license.md  makefile  pipproxy.py  pyproject.toml
Pipproxy/: __main__.py  pipproxy.py
tests/: test_my_package.py
