[tool.poetry]
name = "Pipproxy"
version = "0.1.0"
description = ""
authors = ["hiancdtrsnm <hiancdtrsnm@gmail.com>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
codecov = "^2.0.15"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
